package com.trabajofinal.proyecto.enums;
package com.trabajofinal.proyecto.entidades;

public enum Rol {
	USUARIO, ADMIN;

}
