@startuml
annotation java.lang.Override
annotation javax.persistence.Entity
annotation javax.persistence.Enumerated
annotation javax.persistence.GeneratedValue
annotation javax.persistence.Id
annotation javax.persistence.Temporal
annotation org.hibernate.annotations.GenericGenerator
class com.trabajofinal.proyecto.entidades.Actividad
class com.trabajofinal.proyecto.entidades.Foto
class com.trabajofinal.proyecto.entidades.Pago
class com.trabajofinal.proyecto.entidades.Rol
class com.trabajofinal.proyecto.entidades.Socio
class com.trabajofinal.proyecto.entidades.Usuario
class java.util.Date
class javax.persistence.EnumType
class javax.persistence.GenerationType
class javax.persistence.TemporalType
com.trabajofinal.proyecto.entidades.Actividad ..> java.lang.Override
com.trabajofinal.proyecto.entidades.Actividad ..> java.util.Date
com.trabajofinal.proyecto.entidades.Foto ..> java.lang.Override
com.trabajofinal.proyecto.entidades.Pago ..> java.lang.Override
com.trabajofinal.proyecto.entidades.Pago ..> java.util.Date
com.trabajofinal.proyecto.entidades.Socio ..> java.lang.Override
com.trabajofinal.proyecto.entidades.Socio ..> javax.persistence.Entity
com.trabajofinal.proyecto.entidades.Socio ..> javax.persistence.GeneratedValue
com.trabajofinal.proyecto.entidades.Socio ..> javax.persistence.Id
com.trabajofinal.proyecto.entidades.Socio ..> java.util.Date
com.trabajofinal.proyecto.entidades.Socio ..> javax.persistence.GenerationType
com.trabajofinal.proyecto.entidades.Usuario ..> java.lang.Override
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.Enumerated
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.GeneratedValue
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.Id
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.Temporal
com.trabajofinal.proyecto.entidades.Usuario ..> org.hibernate.annotations.GenericGenerator
com.trabajofinal.proyecto.entidades.Usuario ..> java.util.Date
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.EnumType
com.trabajofinal.proyecto.entidades.Usuario ..> javax.persistence.TemporalType
@enduml